@@ -1,4 +1,4 @@
-* Copyright (c) 2007-2017, INRIA (Institut National de Recherches en
+* Copyright (c) 2007-2019, INRIA (Institut National de Recherches en
 * Informatique et Automatique). All rights reserved.
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
