@@ -36,10 +36,10 @@
 <p>Camlp5 is a preprocessor-pretty-printer of OCaml.<br/>
 It is compatible with OCaml versions from 1.07 to 4.10.0.</p>
 
-<p>The current distributed version is <b>7.09</b> (released 2019-08-24).</p>
+<p>The current distributed version is <b>7.10</b> (released 2019-08-25).</p>
 
 <p>
-<a href="README.txt">README</a><br/>
+<a href="README.md">README</a><br/>
 <a href="CHANGES.txt">CHANGES</a><br/>
 <a href="LICENSE.txt">LICENSE</a>
 </p>
@@ -54,7 +54,7 @@ It is compatible with OCaml versions from 1.07 to 4.10.0.</p>
 compile.</p>
 
 <p>Download the sources:
-  <a href="https://github.com/camlp5/camlp5/archive/rel709.tar.gz">camlp5-rel709.tar.gz</a>.</p>
+  <a href="https://github.com/camlp5/camlp5/archive/rel710.tar.gz">camlp5-rel710.tar.gz</a>.</p>
 
 
 <p>Browse the <a href="doc/htmlc/">documentation</a>.</p>
